--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "pg-hstore": "2.3.2",
         "puppeteer": "1.2.0",
         "request": "^2.85.0",
+        "request-promise": "4.2.2",
         "sequelize": "4.37.4",
         "sequelize-cli": "4.0.0"
     },
