--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "form-data": "2.3.2",
         "lodash": "4.17.5",
         "mz": "2.7.0",
+        "node-poplib-gowhich": "^1.0.2",
         "node-telegram-bot-api": "^0.30.0",
         "pg": "7.4.1",
         "pg-hstore": "2.3.2",
